tests/baselines/reference/functionCall9.errors.txt
==== tests/cases/compiler/functionCall9.ts (4 errors) ====
    function foo(a?:string, b?:number){};
    foo('foo', 1); 
    foo('foo'); 
    foo('foo','bar');
    ~~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'number' to argument 2 which is of type 'string'.
    ~~~
!!! error TS2087: Could not select overload for 'call' expression.
    foo('foo', 1, 'bar');
    ~~~
!!! error TS2081: Supplied parameters do not match any signature of call target.
    ~~~
!!! error TS2087: Could not select overload for 'call' expression.
    foo();